--- a/webapp/appsettings.json
+++ b/webapp/appsettings.json
@@ -3,7 +3,14 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
     }
   },
+  "DetailedErrors": true,
   "AllowedHosts": "*"
 }
