created site from whiteboard picture and some modifications

--- a/webapp/appsettings.json
+++ b/webapp/appsettings.json
@@ -12,5 +12,8 @@
     }
   },
   "DetailedErrors": true,
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=StudioWorldDb.sqlite"
+  }
 }
