--- a/webapp/appsettings.Development.json
+++ b/webapp/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DetailedErrors": true,
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=StudioWorldDb.sqlite"
   }
 }
